--- a/src/index.css
+++ b/src/index.css
@@ -1,22 +1,116 @@
-body {
-  margin: 1;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+}
+/* DEvelopmeNt starT*/
+.Development {
+  padding: 100px;
+  margin: 10px;
+  background: white;
+  border-radius: 5px;
+}
+/* DevLopMenT End */
+.Layout {
+  /* border: 2px solid red; */
+  min-height: 563px;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+.Nav {
+  width: 100%;
+  min-height: 90px;
+  background-color: white;
+  border-bottom: 4px solid rgb(1 118 211);
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: flex-start;
+  padding-top: 10px;
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+.Nav ul {
+  margin-top: 28px;
+  margin-left: 10px;
+  list-style-type: none;
+  display: flex;
+  flex-wrap: nowrap;
+  /* align-items: center; */
+}
+.Nav li {
+  /* margin-left: 4px; */
+  padding: 1rem;
+}
+.Nav li a {
+  text-decoration: none;
+  color: rgb(62, 60, 60);
+  /* margin-left: 10px; */
+  margin-top: 20px;
+}
+.Nav li :hover {
+  border-top: 3.5px solid rgb(36, 110, 174);
+  padding: 1rem;
+}
+.Leads {
+  margin: 10px;
+  /* height: 89vh; */
+  /* padding: 2px; */
+  background-color: rgb(243, 243, 243);
+  border-radius: 5px;
+  box-sizing: border-box;
+  /* horizontal alignment */
+  justify-content: center;
+  /* verticl alignment */
+  align-items: center;
+}
+
+.Leads table {
+  border-top: 1px solid rgb(243, 243, 243);
+  margin-top: 30px;
+  border-collapse: collapse;
+  /* margin-left: 10px; */
+  /* padding: 1px; */
+  table-layout: fixed;
+  width: 100%;
+}
+.Leads thead {
+  display: block;
+}
+.Leads tbody {
+  display: block;
+  height: 320px;
+  /* width: 100%; */
+  overflow-y: auto;
+  font-size: 14px;
+  padding-left: 10px;
+}
+.Leads th {
+  border: 1px solid rgb(193, 189, 189);
+  border-collapse: collapse;
+  padding: 5px;
+  /* padding-left: 17px;
+  padding-right: 17px; */
+  text-align: left;
+  position: sticky;
+  min-width: 138px;
+}
+.Leads td {
+  border-top: 1px solid rgb(193, 189, 189);
+  border-bottom: 1px solid rgb(193, 189, 189);
+  border-collapse: collapse;
+  padding-left: 10px;
+  background: white;
+  height: 5vh;
+  min-width: 132px;
+  text-align: left;
 }
 
 .Lead {
-  padding: 2px;
-  background-color: whitesmoke;
-  border: 1px solid wheat;
-  box-sizing: border-box;
+}
+.Details {
+  /* margin-top: 0; */
 }
 
 /* Create two equal columns that floats next to each other */
@@ -24,8 +118,13 @@ code {
   float: left;
   width: 50%;
   padding: 10px;
-  height: 375px; /* Should be removed. Only for demonstration */
+  /* height: 375px;  */
+  min-height: 90px;
   box-sizing: border-box;
+}
+.column div,
+p {
+  margin: 5px;
 }
 
 /* Clear floats after the columns */
@@ -35,101 +134,235 @@ code {
   clear: both;
   box-sizing: border-box;
 }
-.col {
-  float: left;
-  width: 50%;
-  padding: 10px;
-  height: 60px; /* Should be removed. Only for demonstration */
-  box-sizing: border-box;
-}
-.rw:after {
-  content: "";
-  display: table;
-  clear: both;
-  box-sizing: border-box;
-}
-input {
-  float: left;
-  font-size: 16px;
-  background-color: transparent;
-  border: none;
-  width: 70%;
-  padding: 12px 12px;
-  font-family: "Poppins", sans-serif;
-  float: left;
-}
-input:hover {
-  background-color: #fffaf3;
-}
 
-input:focus {
-  outline: 1px solid #ccc;
-  border: 1px solid #ccc;
+/* .navigation {} */
+.sp1 {
+  --i: 0;
+  --x: -1;
+  --y: 0;
 }
-
-button {
+.sp2 {
+  --i: 1;
+  --x: 1;
+  --y: 0;
+}
+.sp3 {
+  --i: 2;
+  --x: 0;
+  --y: -1;
+}
+.sp4 {
+  --i: 3;
+  --x: 0;
+  --y: 1;
+}
+.sp5 {
+  --i: 4;
+  --x: 1;
+  --y: 1;
+}
+.sp6 {
+  --i: 5;
+  --x: -1;
+  --y: -1;
+}
+.sp7 {
+  --i: 6;
+  --x: 0;
+  --y: 0;
+}
+.sp8 {
+  --i: 7;
+  --x: -1;
+  --y: 1;
+}
+.sp9 {
+  --i: 8;
+  --x: 1;
+  --y: -1;
+}
+.navigation span {
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  background: rgb(116 116 116);
+  border-radius: 50%;
+  transform: translate(calc(9px * var(--x)), calc(9px * var(--y)));
+}
+/* * {
+  border: 1px solid red;
+} */
+.LeadLogo {
+  background: orangered;
+  border-radius: 10px;
   height: 40px;
-  min-width: 50px;
-  border-radius: 0.25rem;
-  float: right;
-  font-size: 1rem;
-  color: black;
-  background-color: skyblue;
-  cursor: pointer;
-  border: none;
-}
-
-.Nav {
-  width: 100%;
-  background-color: rgb(95, 93, 89);
-
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: flex-start;
-}
-.Nav ul {
-  list-style-type: none;
-  display: flex;
-  flex-wrap: nowrap;
-  align-items: center;
-}
-.Nav li {
-  padding: 1rem;
-}
-.Nav li a {
-  text-decoration: none;
-  color: white;
-}
-.Leads {
-  width: 100%;
-  height: 79vh;
-  display: flex;
-  /* justify-content: center; horizontal alignment */
-  /* align-items: center; verticl alignment */
+  width: 40px;
   margin-left: 10px;
   margin-top: 10px;
 }
-table {
-  width: 800px;
-  height: 200px;
-}
-.Leads table {
-  border: 1px solid rgb(63, 59, 59);
-  border-collapse: collapse;
+.Home {
+  margin: 10px;
+  height: 100vh;
   padding: 10px;
+  background-color: rgb(243, 243, 243);
+  border-radius: 5px;
+  box-sizing: border-box;
+  text-align: center;
 }
-.Leads th {
-  border: 1px solid rgb(63, 59, 59);
-  border-collapse: collapse;
-  padding: 10px;
+/* tabs creation css for structure and style */
+.container {
+  width: 66%;
+  margin-left: 10px;
+  margin-top: 0.9em;
+  background-color: white;
+  border-radius: 5px;
+  padding: 15px;
+  color: rgb(116 116 116);
 }
-.Leads td {
-  border: 1px solid rgb(63, 59, 59);
-  border-collapse: collapse;
+.tabs {
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid black;
+}
+.tab {
+  flex: 1;
   padding: 10px;
+  text-align: center;
+  position: relative;
+  cursor: pointer;
+}
+.active-tab {
+  border: none;
+  border-bottom: 2.5px solid rgb(83, 168, 237);
+  text-decoration: underline;
+  color: black;
 }
 
-td {
-  text-align: center;
+.contents {
+  position: relative;
+}
+.content {
+  display: none;
+  position: relative;
+}
+.active-content {
+  display: block;
+  margin-left: 10px;
+  margin-right: 10px;
+  transition: all 1s ease-in-out;
+}
+.Description {
+  background: white;
+  /* padding: 1.5em; */
+  margin: 10px 10px 0px;
+  min-height: 8.5em;
+  border-radius: 5px;
+}
+.first {
+  background: rgb(243, 243, 243);
+  padding: 1rem;
+  min-height: 4.2em;
+  position: relative;
+  /* border-radius: 5px; */
+  border-top-right-radius: 5px;
+  border-top-left-radius: 5px;
+  display: flex;
+}
+.DesLeadLogo {
+  background: rgb(27 150 255);
+  border-radius: 4px;
+  height: 33px;
+  width: 33px;
+  margin-left: 1px;
+  margin-top: 1px;
+}
+.font {
+  margin: 0;
+  font-size: 0.8em;
+  color: rgb(116 116 116);
+}
+.fonth1 {
+  font-size: 1.2em;
+}
+.marginFont {
+  margin-left: 0.8em;
+}
+button {
+  background: white;
+  color: #0176d3;
+  padding: 6px 12px;
+  border: 1.39px solid rgb(158, 156, 156);
+  border-radius: 5px;
+  cursor: pointer;
+}
+.btn {
+  position: absolute;
+  right: 0;
+  margin-right: 9px;
+}
+.follow {
+  margin-right: 5px;
+}
+.clRight {
+  border-top-right-radius: 0;
+  border-bottom-right-radius: 0;
+  border-right: 0;
+}
+.edit {
+  border-radius: 0;
+}
+/**/
+.Relative {
+  min-width: 20px;
+  position: absolute;
+  top: 35px;
+  right: inherit;
+}
+.items {
+  border: 1.39px solid rgb(158, 156, 156);
+  border-radius: 5px;
+  min-width: 8rem;
+  background: white;
+}
+.items ul {
+  list-style-type: none;
+}
+.items li {
+  margin: 10px;
+}
+.items li:hover {
+  background: rgb(200, 198, 198);
+}
+.setRgt {
+  /* border-left: 0; */
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
+}
+.second {
+  display: flex;
+  padding: 0.7rem;
+}
+.rm {
+  margin-right: 4em;
+}
+.font1 {
+  font-size: 0.8em;
+  color: rgb(116 116 116);
+}
+.anch {
+  text-decoration: none;
+  color: #0176d3;
+}
+.black {
+  color: rgb(65, 64, 64);
+}
+.flex {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  /* g */
+}
+.EditPen {
+  margin-top: 4.9px;
+  margin-left: 320px;
+  cursor: pointer;
 }
