--- a/src/index.css
+++ b/src/index.css
@@ -4,13 +4,112 @@
   box-sizing: border-box;
   font-family: Arial, Helvetica, sans-serif;
 }
+html {
+}
+
 /* DEvelopmeNt starT*/
+/* ================================================================== */
+
 .Development {
-  padding: 100px;
+  /* border: 2px solid red; */
+  width: 52.4rem;
+  height: 27em;
   margin: 10px;
+  margin-left: 219px;
   background: white;
   border-radius: 5px;
+  border-top-right-radius: 5px;
+  overflow-y: scroll;
+  position: relative;
 }
+.Development::-webkit-scrollbar {
+  width: 1.1rem;
+}
+.Development::-webkit-scrollbar-track {
+  background: rgb(241 241 241);
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  margin-block: 0.7em;
+}
+.Development::-webkit-scrollbar-thumb {
+  height: 1px;
+  background: rgb(193 193 193);
+  border: 2px solid rgb(241 241 241);
+}
+.Inside {
+  margin: 0;
+  /* border: 2px dotted blue; */
+}
+.Head {
+  text-align: center;
+  font-size: 1.2rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.thickLine {
+  height: 0.14rem;
+  background: rgb(193 193 193);
+}
+.ReqInfo {
+  text-align: right;
+  font-size: 0.8em;
+  color: rgb(62, 60, 60);
+  margin: 1rem 1rem 0.5rem;
+}
+.star {
+  color: rgb(186 5 23);
+}
+.ColorBar {
+  background: rgb(243 243 243);
+  padding: 0.5rem 1rem;
+  border-radius: 0.3em;
+  margin: 0.1rem 0.5rem;
+}
+.descMargin {
+  margin-left: 2rem;
+  margin-top: 1rem;
+}
+.TextArea {
+  width: 46rem;
+  height: 4rem;
+  /* margin: 0rem 2rem 2rem 10rem; */
+  margin-top: 0rem;
+  margin-left: 2rem;
+  margin-bottom: 1.3rem;
+}
+.InputSize {
+  width: 20rem;
+  height: 1.9rem;
+  margin-left: 2rem;
+  border-radius: 5px;
+  border-width: thin;
+  padding: 0.7rem;
+}
+.ButtonBar {
+  background: rgb(238 237 236);
+  opacity: 0.9;
+  padding: 1.6rem;
+  display: flex;
+  position: sticky;
+  justify-content: center;
+  bottom: 0;
+  width: 100%;
+  /* z-index: 1; */
+}
+.Margin {
+  margin-left: 0.1rem;
+  margin-right: 0.1rem;
+  border-width: thin;
+  border-color: rgb(98, 97, 97);
+}
+.Save {
+  margin-left: 0.17rem;
+  margin-right: 0.1rem;
+  background: #0176d3;
+  color: aliceblue;
+  border: none;
+}
+/* ================================================================== */
 /* DevLopMenT End */
 .Layout {
   /* border: 2px solid red; */
@@ -133,6 +232,11 @@ p {
   display: table;
   clear: both;
   box-sizing: border-box;
+}
+/* box instate of column to use entire row */
+.box {
+  margin: 0.6rem;
+  /* padding: 10px; */
 }
 
 /* .navigation {} */
