--- a/src/index.css
+++ b/src/index.css
@@ -8,12 +8,11 @@
 /* DEvelopmeNt starT*/
 /* ================================================================== */
 .Development {
-  margin-top: 50px;
-  /* border: 2px solid red; */
-  /* padding: 1em; */
-  /* display: grid; */
-  /* justify-content: center; */
-  /* align-items: center; */
+  min-height: 468px;
+  border: 2px dashed red;
+  display: grid;
+  justify-content: center;
+  align-items: center;
 }
 .TestButton {
   background: blueviolet;
@@ -26,7 +25,8 @@
   width: 100%;
   height: 320px;
   overflow-y: scroll;
-  background: #fff;
+  /* background: #fff; */
+  background: rgb(243, 243, 243);
 }
 table {
   width: 100%;
@@ -35,6 +35,7 @@ table,
 th,
 td {
   border-top: 1px solid rgb(193, 189, 189);
+  border-bottom: 1px solid rgb(193, 189, 189);
   border-collapse: collapse;
   padding: 7px;
   text-align: left;
@@ -64,6 +65,9 @@ tr th:last-child {
 tr td:last-child {
   border-right: none;
 }
+tr td {
+  background-color: white;
+}
 /* table end*/
 
 /* ================================================================== */
@@ -81,6 +85,7 @@ tr td:last-child {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
+  gap: 1rem;
   align-items: flex-start;
   padding-top: 10px;
   position: sticky;
@@ -96,7 +101,6 @@ tr td:last-child {
   /* align-items: center; */
 }
 .Nav li {
-  /* margin-left: 4px; */
   padding: 1rem;
 }
 .Nav li a {
@@ -114,6 +118,10 @@ tr td:last-child {
   border-top: 3.5px solid rgb(36, 110, 174);
   padding: 1rem;
 }
+.Nav li :focus {
+  border-top: 3.5px solid rgb(36, 110, 174);
+  padding: 1rem;
+}
 .Leads {
   margin: 10px;
   /* height: 89vh; */
@@ -127,49 +135,11 @@ tr td:last-child {
   align-items: center;
 }
 
-/* .Leads table {
-  border-top: 1px solid rgb(243, 243, 243);
-  margin-top: 30px;
-  border-collapse: collapse;
-  table-layout: fixed;
-  width: 100%;
-} */
-/* .Leads thead {
-  display: block;
-} */
-/* .Leads tbody {
-  display: block;
-  height: 320px;
-  overflow-y: auto;
-  font-size: 14px;
-  padding-left: 10px;
-} */
-/* .Leads th {
-  border: 1px solid rgb(193, 189, 189);
-  border-collapse: collapse;
-  padding: 5px;
-  padding-left: 8px;
-  text-align: left;
-  position: sticky;
-  min-width: 138px;
-} */
-/* .Leads td {
-  border-top: 1px solid rgb(193, 189, 189);
-  border-bottom: 1px solid rgb(193, 189, 189);
-  border-collapse: collapse;
-  padding-left: 10px;
-  background: white;
-  height: 5vh;
-  min-width: 132px;
-  text-align: left;
-} */
-
 /* Create two equal columns that floats next to each other */
 .column {
   float: left;
   width: 50%;
   padding: 10px;
-  /* height: 375px;  */
   min-height: 90px;
   box-sizing: border-box;
 }
@@ -261,15 +231,19 @@ p {
   margin-left: 10px;
   margin-top: 10px;
 }
+/* background-color: rgb(243, 243, 243); */
 .Home {
   margin: 10px;
-  height: 100vh;
-  padding: 10px;
-  /* background-color: rgb(243, 243, 243); */
+  height: 81vh;
   background-color: white;
   border-radius: 5px;
   box-sizing: border-box;
-  text-align: center;
+  justify-content: center;
+  align-items: center;
+}
+.Home > img {
+  width: 100%;
+  height: 100%;
 }
 /* tabs creation css for structure and style */
 .container {
@@ -326,7 +300,6 @@ p {
   /* min-height: 8em; */
   min-height: 4.2em;
   position: relative;
-  /* border-radius: 5px; */
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
   display: flex;
@@ -337,7 +310,6 @@ p {
   min-height: 8em;
   /* min-height: 4.2em; */
   position: relative;
-  /* border-radius: 5px; */
   border-top-right-radius: 5px;
   border-top-left-radius: 5px;
   display: flex;
