--- a/src/components/DocsViewer.css
+++ b/src/components/DocsViewer.css
@@ -1,6 +1,7 @@
 .DocsViewer {
-  width: 80vw;
-  height: 80vh;
+  /* width: 80vw; */
+  /* height: 80vh; */
   border: 2px solid blue;
   padding: 10px;
+  overflow: auto;
 }
