--- a/src/components/VerifyPatientBenfitDetailsfromLeadModal.css
+++ b/src/components/VerifyPatientBenfitDetailsfromLeadModal.css
@@ -5,6 +5,21 @@
   border-radius: 4px;
   margin-top: 55px;
   margin-left: 120px;
-  text-align: center;
-  padding: 200px; /*only for test*/
+  overflow: auto;
+  padding: 20px;
+}
+.VerifyPatientBenfitDetailsfromLeadModal::-webkit-scrollbar {
+  width: 1.1rem;
+}
+.VerifyPatientBenfitDetailsfromLeadModal::-webkit-scrollbar-track {
+  background: rgb(241 241 241);
+  border-top-right-radius: 5px;
+  border-bottom-right-radius: 5px;
+  margin-block: 0.7em;
+}
+.VerifyPatientBenfitDetailsfromLeadModal::-webkit-scrollbar-thumb {
+  height: 1px;
+  background: rgb(193 193 193);
+  /* background: orangered; */
+  border: 2px solid rgb(241 241 241);
 }
