--- a/src/index.css
+++ b/src/index.css
@@ -5,76 +5,10 @@
   font-family: Arial, Helvetica, sans-serif;
 }
 
-/* DEvelopmeNt starT*/
-/* ================================================================== */
-.Development {
-  min-height: 468px;
-  border: 2px dashed red;
-  display: grid;
-  justify-content: center;
-  align-items: center;
-}
-.TestButton {
-  background: blueviolet;
-  border: none;
-  color: wheat;
-  padding: 1rem;
-}
-/* table start*/
-.table-box {
-  width: 100%;
-  height: 320px;
-  overflow-y: scroll;
-  /* background: #fff; */
-  background: rgb(243, 243, 243);
-}
-table {
-  width: 100%;
-}
-table,
-th,
-td {
-  border-top: 1px solid rgb(193, 189, 189);
-  border-bottom: 1px solid rgb(193, 189, 189);
-  border-collapse: collapse;
-  padding: 7px;
-  text-align: left;
-}
-th {
-  border: 1px solid rgb(193, 189, 189);
-  position: sticky;
-  top: 0;
-  box-sizing: border-box;
-  background-color: rgb(243, 243, 243);
-}
-tr th:nth-child(1) {
-  width: 60px;
-  text-align: center;
-  border-left: none;
-  border-right: none;
-}
-tr th:nth-child(2) {
-  border-left: none;
-}
-tr td:nth-child(1) {
-  text-align: center;
-}
-tr th:last-child {
-  border-right: none;
-}
-tr td:last-child {
-  border-right: none;
-}
-tr td {
-  background-color: white;
-}
-/* table end*/
-
-/* ================================================================== */
-/* DevLopMenT End */
 .Layout {
   /* border: 2px solid red; */
-  min-height: 563px;
+  /* min-height: 563px; */
+  min-height: 100vh;
 }
 
 .Nav {
@@ -101,7 +35,7 @@ tr td {
   /* align-items: center; */
 }
 .Nav li {
-  padding: 1rem;
+  padding: 10px;
 }
 .Nav li a {
   text-decoration: none;
@@ -110,17 +44,14 @@ tr td {
   margin-top: 20px;
   font-size: 0.9rem;
 }
-.Nav li :hover {
+.Nav li:hover {
   border-top: 3.5px solid rgb(36, 110, 174);
-  padding: 1rem;
 }
-.Nav li :active {
+.Nav li:active {
   border-top: 3.5px solid rgb(36, 110, 174);
-  padding: 1rem;
 }
-.Nav li :focus {
+.Nav li:focus {
   border-top: 3.5px solid rgb(36, 110, 174);
-  padding: 1rem;
 }
 .Leads {
   margin: 10px;
